[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=pythion"
testpaths = ["tests",]

[tool.mypy]
mypy_path = "src"
strict = true
exclude = ['/_layout/']
follow_imports = "silent"

# check_untyped_defs = true
# disallow_any_generics = true
# ignore_missing_imports = true
# no_implicit_optional = true
# show_error_codes = true
# strict_equality = true
# warn_redundant_casts = true
# warn_return_any = true
# warn_unreachable = true
# warn_unused_configs = true
# no_implicit_reexport = true
# disallow_subclassing_any = true # my additions
# disallow_untyped_calls = true
