[metadata]
name = pythion
description = A package with (hopefully) useful lab GUI:s and hardware interfaces for running (for example) the Low-Energy ION implanter.
author = Gustav Lidberg
author_email = gustav.lidberg@icloud.com
license = MIT
license_file = LICENSE
platforms = win32
classifiers = 
    Programming Language :: Python :: 3

url = https://github.com/gustavlidberg/WienFilter

[options]
packages =
    pythion
install_requires =
    pyqt5 >= 5
    pyserial >= 3
package_dir =
    =src
python_requires = >=3.8
zip_safe = no